# spec

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  LICENSE  Makefile  README.md  UTxORPC.csproj  Utxorpc.Spec.csproj  buf.gen.dotnet.v1alpha.yaml  buf.gen.dotnet.v1beta.yaml  buf.gen.yaml  buf.work.yaml  cabal.project  conformance_test_issue.md  go.mod  go.sum  package-lock.json  package.json  spec.sln  test.txt  utxorpc.cabal
.github/: ci-publish.yaml
.github/actions/: rust-release.yml
.github/actions/go-release/: action.yml
.github/actions/node-release/: action.yml
.github/actions/publish-dotnet/: action.yml
.github/actions/publish-go/: action.yml
.github/actions/publish-haskell/: action.yml
.github/actions/publish-node/: action.yml
.github/actions/publish-python/: action.yml
.github/actions/publish-rust/: action.yml
.github/actions/rust-release/: action.yml
.github/actions/setup-protoc-hololens/: action.yml
.github/workflows/: build-haskell.yml  ci-generate.yml  ci-publish.yaml  dry-run.yml  generate-and-build.yml  generate.yml  pr-check.yml  publish-all.yml  publish.yml  release.yml
cardano/: README.md  buf.gen.yaml
cardano/proto/: buf.yaml
cardano/proto/utxorpc/cardano/v1/: cardano.proto
cardano/proto/utxorpc/v1/cardano/: cardano.proto
ledger/: README.md
ledger/proto/utxorpc/ledger/v1/: certs.proto  tx.proto
proto/utxorpc/ledger/v1/: certs.proto  metadata.proto  primitives.proto  scripts.proto  tx.proto
proto/utxorpc/state/v1/: state.proto
proto/utxorpc/sync/v1/: sync.proto
proto/utxorpc/v1/submit/: submit.proto
proto/utxorpc/v1/sync/: sync.proto
proto/utxorpc/v1alpha/cardano/: cardano.proto
proto/utxorpc/v1alpha/query/: query.proto
proto/utxorpc/v1alpha/submit/: submit.proto
proto/utxorpc/v1alpha/sync/: sync.proto
proto/utxorpc/v1alpha/watch/: watch.proto
proto/utxorpc/v1beta/bitcoin/: bitcoin.proto
proto/utxorpc/v1beta/cardano/: cardano.proto
proto/utxorpc/v1beta/handshake/: handshake.proto
proto/utxorpc/v1beta/query/: query.proto
proto/utxorpc/v1beta/sync/: sync.proto
proto/utxorpc/v1beta/watch/: watch.proto
proto/utxorpc/watch/v1/: watch.proto
scripts/: web-sdk-build.cjs
state/: buf.gen.yaml
submit/: buf.gen.yaml
submit/proto/: buf.yaml
submit/proto/utxorpc/submit/v1/: submit.proto
sync/: buf.gen.yaml
sync/proto/: buf.yaml
sync/proto/utxorpc/sync/v1/: sync.proto
watch/: buf.gen.yaml
watch/proto/: buf.yaml
watch/proto/utxorpc/v1/watch/: watch.proto
watch/proto/utxorpc/watch/v1/: watch.proto
