cabal-version: 1.12

name:           utxorpc
version:        0.1.0.0
synopsis:       A gRPC interface for UTxO Blockchains
description:    UTxO RPC (u5c for short) is an interface tailored for interactions with UTxO-based blockchains, prioritizing performance and developer experience. By providing a common contract, a range of SDKs, and thorough documentation, UTxO RPC aims to facilitate:
                .
                * Reusability: Enabling shared components that can be reused across different projects to simplify the integration effort.
                * Interoperability: A common interface to simplify integrations between different parties and avoid the common pitfall of vendor lock-in.
                * Performance: A serialized binary format which is compact and efficient, resulting in smaller message sizes and reduced network overhead compared to its JSON counterpart
                .
                Please note that UTxO RPC is just a specification of an interface between agents and the blockchain, it doesn't provide any concrete client / provider implementations. The primary purpose of u5c is to define a set of standardized methods, data structures, and communication patterns.
category:       Blockchain, Cardano, GRPC
homepage:       https://github.com/utxorpc/spec#readme
bug-reports:    https://github.com/utxorpc/spec/issues
license:        Apache-2.0
build-type:     Simple
extra-source-files:
    README.md

library
  exposed-modules:
      Proto.Utxorpc.Build.V1.Build
      Proto.Utxorpc.Cardano.V1.Cardano
      Proto.Utxorpc.Submit.V1.Submit
      Proto.Utxorpc.Sync.V1.Sync
      Proto.Utxorpc.Watch.V1.Watch
      Proto.Utxorpc.Build.V1.Build_Fields
      Proto.Utxorpc.Cardano.V1.Cardano_Fields
      Proto.Utxorpc.Submit.V1.Submit_Fields
      Proto.Utxorpc.Sync.V1.Sync_Fields
      Proto.Utxorpc.Watch.V1.Watch_Fields
  hs-source-dirs:
      build/gen/haskell
      cardano/gen/haskell
      submit/gen/haskell
      sync/gen/haskell
      watch/gen/haskell
  build-depends:
      base >=4.7 && <5
    , proto-lens
    , proto-lens-protobuf-types
    , proto-lens-runtime
  default-language: Haskell2010
